--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       }
 
       .slide-up {
-        animation: slideUp 0.3s ease-out forwards;
+        animation: slideUp 0.5s cubic-bezier(0.22, 1, 0.36, 1) forwards;
       }
 
       @keyframes fadeIn {
@@ -182,6 +182,53 @@
 
       .fade-in {
         animation: fadeIn 0.2s ease-out forwards;
+      }
+
+      /* Split panel layout animations */
+      @keyframes slideInFromRight {
+        0% {
+          transform: translateX(120%);
+          opacity: 0;
+        }
+        100% {
+          transform: translateX(0);
+          opacity: 1;
+        }
+      }
+
+      .slide-in-right {
+        animation: slideInFromRight 0.6s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+      }
+
+      @keyframes slideOutToRight {
+        0% {
+          transform: translateX(0);
+          opacity: 1;
+        }
+        100% {
+          transform: translateX(150%);
+          opacity: 0;
+        }
+      }
+
+      .slide-out-right {
+        animation: slideOutToRight 0.4s cubic-bezier(0.4, 0, 1, 1) forwards;
+      }
+
+      /* Voice control transition when panel opens */
+      .voice-panel {
+        transition: transform 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+        will-change: transform;
+      }
+
+      /* Delay voice panel return when content exits */
+      .voice-panel.delayed-return {
+        transition: transform 0.5s cubic-bezier(0.22, 1, 0.36, 1) 0.25s;
+      }
+
+      /* Content panel styling */
+      .content-panel {
+        transform-origin: right center;
       }
     </style>
   <script type="importmap">
