--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
                 primary: '#0d9488',
                 light: '#5eead4',
                 pale: '#ccfbf1',
+              },
+              sand: '#f3ede7',
+              coral: {
+                primary: '#f9735b',
+                soft: '#ffe3d8',
               }
             }
           }
