refining icon layer positionings

--- a/index.html
+++ b/index.html
@@ -388,6 +388,15 @@
       }
 
       .turn-logo--speaking .turn-logo__calendar,
+      .turn-logo--speaking .turn-logo__detail {
+        transform: translate(-30px, -38px);
+      }
+
+      .turn-logo--speaking .turn-logo__sparkles {
+        transform: translate(-15px, -32px);
+      }
+
+      .turn-logo--speaking .turn-logo__calendar,
       .turn-logo--speaking .turn-logo__detail,
       .turn-logo--speaking .turn-logo__sparkles {
         opacity: 1;
